@@ -1149,6 +1149,11 @@ register struct trobj *trop;
 		}
 #endif
 		trop++;
+
+		/* mark object as start inventory object */
+		if (obj) {
+			obj->was_in_starting_inventory = TRUE;
+		}
 	}
 }
 
